fix: add mysql account switching status tip (#1856)

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -136,7 +136,6 @@
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
     "Trigger condition information is missing, please complete!": "触发条件信息缺失，请补全!",
-    "Use must have root permissions to initialize the machine.": "用于初始化机器的用户，需要有 root 权限",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
     "VPC Label": "VPC 标签",
@@ -156,7 +155,6 @@
     "add Alibaba Cloud Container Service Cluster (Proprietary Version)": "添加阿里云容器服务集群（专有版）",
     "add alibaba cloud machine": "添加阿里云主机",
     "add analysis rule": "添加分析规则",
-    "add cloud resources": "添加云资源",
     "add cluster": "添加集群",
     "add existing resources to build a cluster": "添加已有资源自建集群",
     "add external user": "添加外部用户",
@@ -174,8 +172,6 @@
     "aggregator": "聚合",
     "agile project": "敏捷项目",
     "alarm": "告警",
-    "alarm after recovery": "恢复后告警",
-    "alarm cluster": "告警集群",
     "alarm data report": "告警数据报表",
     "alarm information": "告警信息",
     "alarm level": "告警级别",
@@ -225,8 +221,6 @@
     "block network": "封网",
     "built-in templates": "内置模板",
     "built-in templates tip": "可以套用内置模板来快速编辑分析规则",
-    "by fixed bandwidth": "按固定带宽",
-    "by flow": "按流量",
     "can't be the same as the data path": "不能和数据路径一致",
     "cannot be the same as the exec path": "不能和exec路径一样",
     "cannot contain restricted keywords": "不能包含限制关键字",
@@ -242,6 +236,7 @@
     "cloud account cannot be restored after deletion, confirm execution?": "云账户删除后无法恢复，确认执行?",
     "cloud database configuration": "云数据库配置",
     "cloud resource overview": "云服务概览",
+    "cluster": "集群",
     "cluster ID": "集群ID",
     "cluster Token Management": "集群Token管理",
     "cluster added successfully": "添加集群成功",
@@ -331,7 +326,6 @@
     "extensive domain": "泛域名",
     "extract method": "提取方式",
     "extract result": "提取结果",
-    "field": "字段",
     "field rule": "字段规则",
     "field rule alias cannot be repeated": "字段规则别名不能重复",
     "field rule alias is required": "字段规则别名必填",
@@ -385,10 +379,8 @@
     "letters and numbers, separated by hyphens, cannot be modified if confirmed": "字母数字，中间以中横线分隔，确定后无法修改",
     "library reference": "库引用",
     "load balancing configuration": "负载均衡配置",
-    "local ssd": "本地SSD",
     "log content": "日志内容",
     "log filter": "日志筛选",
-    "machine": "机器",
     "machine IP": "机器IP",
     "machine IP list": "机器IP列表",
     "machine alarm": "机器告警",
@@ -524,7 +516,6 @@
     "please select node type": "请选择节点类型",
     "please select operation type": "请选择操作类型",
     "please select specifications": "请选择规格",
-    "please select the corresponding value": "请输入对应值",
     "please select the label": "请选择标签",
     "please use the following command to get the Secret information corresponding to the Service Account": "请使用如下命令得到 Service Account 对应的 Secret 信息",
     "pod detail": "Pod 详情",
@@ -698,9 +689,9 @@
     "batch authorize application": "批量授权应用",
     "batch set the role of member": "批量设置成员角色",
     "can not be all spaces": "不能全为空格",
-    "cannot contain spaces": "不能含有空格",
     "cancel copy": "取消复制",
     "cancel cut": "取消剪切",
+    "cannot contain spaces": "不能含有空格",
     "change setting": "修改配置",
     "changes in the day": "天内变化",
     "changes in the hour": "小时内变化",
@@ -909,6 +900,7 @@
     "abandoned": "废弃",
     "ability app": "能力应用",
     "access control value": "门禁值",
+    "account switching": "账号切换中",
     "activity log": "活动日志",
     "actual value": "实际值",
     "add": "新增",
@@ -1410,6 +1402,7 @@
     "mr-tpl-unit-test": "单元测试 (注意：单元测试必须能够在本地、任意环境可以顺利跑过，请自行 mock 或则规避依赖）",
     "must start with a letter or number": "必须以字母或数字开头",
     "my approval": "我审批的",
+    "mysql addon account switching, please restart to take effect": "mysql addon 账号切换中，请重启生效",
     "name is required": "名称不能为空",
     "network configuration": "网络配置",
     "new": "新建",
@@ -2129,8 +2122,8 @@
     "duration desc": "耗时降序",
     "earlier": "更早",
     "edit a endpoint": "编辑流量入口",
-    "emergency": "紧急",
     "edit monitoring": "编辑监控",
+    "emergency": "紧急",
     "enable daily report": "开启日报",
     "enable rule": "开启规则",
     "enable weekly report": "开启周报",
@@ -2146,7 +2139,6 @@
     "environment entrance": "环境入口",
     "environments": "环境",
     "equal": "等于",
-    "error": "错误",
     "error analysis": "错误分析",
     "error code": "错误码",
     "error code and error ratio should be set at the same time": "错误码和错误比例需同时设置",
@@ -2290,7 +2282,6 @@
     "next": "下一步",
     "no": "否",
     "no data": "暂无数据",
-    "no service": "暂无服务",
     "no service is connected currently, click the button below to access the service": "当前未接入任何服务，点击下方按钮即可接入服务",
     "node list": "节点列表",
     "node traffic management": "节点流量管理",
