refactor(common): project detail optimization in org center

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -139,6 +139,7 @@
     "The invitation link has been created.": "邀请链接已创建",
     "The name is reserved internally. Please change the name.": "该命名被内部保留，请更改命名",
     "The {index} item quantity and unit cannot be empty.": "第{index}项数量和单位不得为空",
+    "This page has no data, whether to go ": "该页暂无数据，是否前往 ",
     "Tickets": "工单",
     "Tokyo": "东京",
     "URL parameters": "URL参数",
@@ -584,6 +585,7 @@
     "no more data": "没有更多数据",
     "no more than {size} characters": "不超过{size}字符",
     "no need to execute": "无需执行",
+    "no quota": "暂无配额",
     "no running runtime": "没有运行的Runtime",
     "no template": "暂无模板",
     "node": "节点",
@@ -620,11 +622,13 @@
     "orgCenter": "管理中心",
     "organization": "组织",
     "organization unit": "组织单位",
+    "other settings": "其他设置",
     "out params exist the same {key}": "出参存在相同的{key}",
     "out params {name} setting is abnormal": "出参 {name} 设置异常",
     "overtime": "超时",
     "overview": "总览",
     "page loading completed": "网页加载完成",
+    "page 1": "第一页",
     "parameter cannot be empty": "参数不能为空",
     "parameter setting": "参数设置",
     "passed": "已通过",
@@ -897,6 +901,7 @@
     "uppercase letter": "大写字母",
     "url address": "URL 地址",
     "usage": "使用量：",
+    "used": "已使用",
     "user": "用户",
     "user ID": "用户ID",
     "user name": "用户名",
