--- a/locales/en.json
+++ b/locales/en.json
@@ -139,6 +139,7 @@
     "The invitation link has been created.": "The invitation link has been created.",
     "The name is reserved internally. Please change the name.": "The name is reserved internally. Please change the name.",
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
+    "This page has no data, whether to go ": "This page has no data, whether to go ",
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
     "URL parameters": "URL parameters",
@@ -584,6 +585,7 @@
     "no more data": "no more data",
     "no more than {size} characters": "no more than {size} characters",
     "no need to execute": "no need to execute",
+    "no quota": "no quota",
     "no running runtime": "no running runtime",
     "no template": "no template",
     "node": "Node",
@@ -620,11 +622,13 @@
     "orgCenter": "OrgCenter",
     "organization": "organization",
     "organization unit": "organization unit",
+    "other settings": "other settings",
     "out params exist the same {key}": "out params exist the same {key}",
     "out params {name} setting is abnormal": "out params {name} setting is abnormal",
     "overtime": "overtime",
     "overview": "overview",
     "page loading completed": "page loading completed",
+    "page 1": "page 1",
     "parameter cannot be empty": "parameter cannot be empty",
     "parameter setting": "parameter setting",
     "passed": "passed",
@@ -897,6 +901,7 @@
     "uppercase letter": "uppercase letter",
     "url address": "url address",
     "usage": "used:",
+    "used": "used",
     "user": "user",
     "user ID": "user ID",
     "user name": "user name",
