Feat: update alarm classification api and modify alarm strategy from modal to new page (#1857)
* feat: update alarm api

* fix: update api

* feat: add strategy to new page

* feat: update style and refactor code

* feat: i18n

* refactor: refactor  code

* style: update style

* fix: i18n

* refactor: add copyright to  strategy form file

* fix: can  not edit contion value when first edit

* refactor: refactor code

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -135,7 +135,6 @@
     "The total number of selected resources": "筛选项资源总和",
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
-    "Trigger condition information is missing, please complete!": "触发条件信息缺失，请补全!",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
     "VPC Label": "VPC 标签",
@@ -163,6 +162,7 @@
     "add machine": "添加机器",
     "add machine to cluster": "添加机器到集群",
     "add more notification groups": "添加更多通知组",
+    "add notification object": "添加通知对象",
     "add rule": "添加规则",
     "addon used": "addon已使用",
     "after-adding-key": "添加阿里云密钥后，即可快速实现基于阿里云资源管理",
@@ -268,6 +268,8 @@
     "consist of lowercase letters, numbers and hyphens": "由小写字母、数字，-组成",
     "container log": "容器日志",
     "container segment": "容器网段",
+    "content of alarm rule is missing, please complete!": "告警规则内容缺失，请补全!",
+    "content of filter rule is missing, please complete!": "过滤规则内容缺失，请补全!",
     "copy command": "复制命令",
     "copy to clipboard": "复制到剪切板",
     "cores": "核",
@@ -277,7 +279,7 @@
     "create Topic": "创建 Topic",
     "create analysis rule": "创建分析规则",
     "create announcement": "新建公告",
-    "create at least one notify strategy": "至少创建一个通知策略",
+    "create at least one notification object": "至少创建一个通知对象",
     "create at least one rule": "至少创建一条规则",
     "create cluster": "创建集群",
     "create custom rule": "创建自定义规则",
@@ -315,8 +317,8 @@
     "eastern united states": "美国东部",
     "ecs add trending": "云主机添加趋势",
     "ecs configuration": "云主机配置",
+    "edit alarm strategy": "编辑告警策略",
     "edit analysis rule": "编辑分析规则",
-    "edit strategy": "编辑策略",
     "efficiency cloud": "高效云盘",
     "exec absolute path": "exec绝对路径",
     "exit reasons": "退出原因",
@@ -413,6 +415,7 @@
     "network billing method": "网络付费方式",
     "network configuration": "网络配置",
     "new O & M dashboard": "新建运维大盘",
+    "new alarm strategy": "新建告警策略",
     "new cluster deployment": "新增集群部署",
     "new connections per second": "每秒新建连接数",
     "new dashboard": "新建仪表盘",
@@ -440,7 +443,6 @@
     "notice published": "已发布",
     "notice status": "状态",
     "notice unpublished": "未发布",
-    "notify strategy": "通知策略",
     "number": "数量",
     "number of Bucket": "Bucket数",
     "number of VSW": "交换机数量",
@@ -493,6 +495,7 @@
     "please enter a number greater than or equal to {min}": "请输入大于等于{min}的数字",
     "please enter an odd number no greater than {max}": "请输入不大于{max}的奇数",
     "please enter bucket name": "请输入bucket名称",
+    "please enter here": "请在此输入",
     "please enter the cluster name to confirm offline": "请输入集群名确认下线",
     "please enter the correct port": "请输入正确的端口",
     "please enter the log content first": "请先输入日志内容",
@@ -579,6 +582,9 @@
     "search by container IP": "输入容器IP搜索",
     "search by content": "根据内容搜索",
     "select group": "选择群组",
+    "select label": "选择标签",
+    "select level": "选择级别",
+    "select notify method": "选择通知方式",
     "select project": "选择项目",
     "select resources": "选择资源",
     "select the cluster type": "请选择集群类型",
@@ -632,7 +638,6 @@
     "total number of hosts": "总主机数",
     "total project resources": "项目总资源",
     "total storage capacity": "总存储容量",
-    "trigger conditions": "触发条件",
     "trigger recover": "触发恢复",
     "trigger rules": "触发规则定义",
     "type template": "类型模板",
@@ -2199,7 +2204,6 @@
     "geography": "地理",
     "global strategy": "全局策略",
     "global topology": "全局拓扑",
-    "gray release": "灰度发布",
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
