--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -135,7 +135,6 @@
     "The total number of selected resources": "The total number of selected resources",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
-    "Trigger condition information is missing, please complete!": "Trigger condition information is missing, please complete!",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
     "VPC Label": "VPC Label",
@@ -163,6 +162,7 @@
     "add machine": "add machine",
     "add machine to cluster": "add machine to cluster",
     "add more notification groups": "add more notification groups",
+    "add notification object": "add notification object",
     "add rule": "add rule",
     "addon used": "addon used",
     "after-adding-key": "after adding the Alibaba Cloud key, you can quickly realize resource management based on Alibaba Cloud",
@@ -268,6 +268,8 @@
     "consist of lowercase letters, numbers and hyphens": "consist of lowercase letters, numbers and hyphens",
     "container log": "container log",
     "container segment": "container segment",
+    "content of alarm rule is missing, please complete!": "content of alarm rule is missing, please complete!",
+    "content of filter rule is missing, please complete!": "content of filter rule is missing, please complete!",
     "copy command": "copy command",
     "copy to clipboard": "copy to clipboard",
     "cores": "cores",
@@ -277,7 +279,7 @@
     "create Topic": "create Topic",
     "create analysis rule": "create analysis rule",
     "create announcement": "create announcement",
-    "create at least one notify strategy": "create at least one notify strategy",
+    "create at least one notification object": "create at least one notification object",
     "create at least one rule": "create at least one rule",
     "create cluster": "create cluster",
     "create custom rule": "create custom rule",
@@ -315,8 +317,8 @@
     "eastern united states": "eastern united states",
     "ecs add trending": "ecs add trending",
     "ecs configuration": "ecs configuration",
+    "edit alarm strategy": "edit alarm strategy",
     "edit analysis rule": "edit analysis rule",
-    "edit strategy": "edit strategy",
     "efficiency cloud": "efficiency cloud",
     "exec absolute path": "exec absolute path",
     "exit reasons": "exit reasons",
@@ -413,6 +415,7 @@
     "network billing method": "network billing method",
     "network configuration": "network configuration",
     "new O & M dashboard": "new O & M dashboard",
+    "new alarm strategy": "new alarm strategy",
     "new cluster deployment": "new cluster deployment",
     "new connections per second": "new connections per second",
     "new dashboard": "new dashboard",
@@ -440,7 +443,6 @@
     "notice published": "released",
     "notice status": "status",
     "notice unpublished": "unpublished",
-    "notify strategy": "notify strategy",
     "number": "number",
     "number of Bucket": "number of Bucket",
     "number of VSW": "number of VSW",
@@ -493,6 +495,7 @@
     "please enter a number greater than or equal to {min}": "please enter a number greater than or equal to {min}",
     "please enter an odd number no greater than {max}": "please enter an odd number no greater than {max}",
     "please enter bucket name": "please enter bucket name",
+    "please enter here": "please enter here",
     "please enter the cluster name to confirm offline": "please enter the cluster name to confirm offline",
     "please enter the correct port": "please enter the correct port",
     "please enter the log content first": "please enter the log content first",
@@ -579,6 +582,9 @@
     "search by container IP": "search by container IP",
     "search by content": "search by content",
     "select group": "select group",
+    "select label": "select label",
+    "select level": "select level",
+    "select notify method": "select notify method",
     "select project": "select project",
     "select resources": "select resources",
     "select the cluster type": "select the cluster type",
@@ -632,7 +638,6 @@
     "total number of hosts": "total number of hosts",
     "total project resources": "total project resources",
     "total storage capacity": "total storage capacity",
-    "trigger conditions": "trigger conditions",
     "trigger recover": "trigger recover",
     "trigger rules": "trigger rules",
     "type template": "type template",
@@ -2199,7 +2204,6 @@
     "geography": "geography",
     "global strategy": "global strategy",
     "global topology": "global topology",
-    "gray release": "gray release",
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
