feat: add  tip to application/member stastics in project-list

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,7 +80,6 @@
     "Market": "Market",
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
-    "Memory allocation": "Memory allocation",
     "Memory limit": "Memory limit",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
@@ -877,8 +876,6 @@
     "title": "title",
     "today": "today",
     "total": "total",
-    "total CPU allocation": "total CPU allocation",
-    "total Memory allocation": "total Memory allocation",
     "total {total} items": "total {total} items",
     "total {total} items, current display top 10000": "total {total} items, current display top 10000",
     "traffic audit": "traffic audit",
@@ -897,6 +894,7 @@
     "unknown state": "unknown state",
     "unspecified": "unspecified",
     "update": "update",
+    "update data every day at 0": "update data every day at 0 o'Clock",
     "update strategy": "update strategy",
     "update time": "update time",
     "updated successfully": "updated successfully",
