--- a/locales/zh.json
+++ b/locales/zh.json
@@ -80,7 +80,6 @@
     "Market": "集市",
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
-    "Memory allocation": "内存分配",
     "Memory limit": "内存限额",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
@@ -877,8 +876,6 @@
     "title": "标题",
     "today": "今天",
     "total": "总",
-    "total CPU allocation": "CPU 分配总量",
-    "total Memory allocation": "内存分配总量",
     "total {total} items": "共 {total} 条",
     "total {total} items, current display top 10000": "共 {total} 条，当前显示前10000条",
     "traffic audit": "流量审计",
@@ -897,6 +894,7 @@
     "unknown state": "未知状态",
     "unspecified": "未指定",
     "update": "更新",
+    "update data every day at 0": "每天 0 点更新数据",
     "update strategy": "更新策略",
     "update time": "更新时间",
     "updated successfully": "更新成功",
