--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -781,8 +781,8 @@
     "please fill in the format correctly": "请正确填写格式",
     "please fill out": "请填写",
     "please input": "请键入",
-    "remaining quota": "剩余配额",
     "reference times": "引用次数",
+    "remaining quota": "剩余配额",
     "running cluster": "运行集群",
     "search by {name}": "通过{name}搜索",
     "search for": "搜索",
@@ -1594,7 +1594,6 @@
     "project level app": "项目级应用",
     "project member": "项目成员",
     "project quota": "项目配额",
-    "project resource": "项目资源",
     "project updated successfully": "更新项目成功",
     "project-level-app-form-tip": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
     "protect branch, not editable": "保护分支, 不可编辑",
@@ -2204,6 +2203,7 @@
     "geography": "地理",
     "global strategy": "全局策略",
     "global topology": "全局拓扑",
+    "gray release": "灰度发布",
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
