feat: update project menu

--- a/locales/en.json
+++ b/locales/en.json
@@ -79,7 +79,6 @@
     "Market": "Market",
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
-    "Memory allocation": "Memory allocation",
     "Memory limit": "Memory limit",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
@@ -112,6 +111,7 @@
     "Release": "Release",
     "Report": "Report",
     "Resource": "Resource",
+    "Resource summary": "Resource summary",
     "SLA description": "SLA description",
     "SLA name": "SLA name",
     "SMS": "SMS",
@@ -121,6 +121,7 @@
     "Service": "Service",
     "Set up a notification channel to set a notification mode": "Set up a notification channel to set a notification mode",
     "Setting": "Setting",
+    "{key} Settings": "Settings",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
     "Silicon valley": "Silicon valley",
@@ -133,6 +134,7 @@
     "Sydney": "Sydney",
     "Task": "Task",
     "Test": "Test",
+    "Test Management": "Test Management",
     "The administrator has received your request. Please go to": "the administrator has received your request. please come to ",
     "The current version has been referenced by the management entry. Please dereference before editing.": "The current version has been compressed and referenced by management, please dereference before editing",
     "The invitation link and verification code have been created": "The invitation link and verification code have been created",
@@ -873,8 +875,6 @@
     "title": "title",
     "today": "today",
     "total": "total",
-    "total CPU allocation": "total CPU allocation",
-    "total Memory allocation": "total Memory allocation",
     "total {total} items": "total {total} items",
     "total {total} items, current display top 10000": "total {total} items, current display top 10000",
     "traffic audit": "traffic audit",
