--- a/locales/zh.json
+++ b/locales/zh.json
@@ -79,7 +79,6 @@
     "Market": "集市",
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
-    "Memory allocation": "内存分配",
     "Memory limit": "内存限额",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
@@ -112,6 +111,7 @@
     "Release": "发布",
     "Report": "报告",
     "Resource": "资源",
+    "Resource summary": "资源汇总",
     "SLA description": "SLA 描述",
     "SLA name": "SLA 名称",
     "SMS": "短信",
@@ -121,6 +121,7 @@
     "Service": "服务",
     "Set up a notification channel to set a notification mode": "建立通知通道以设置通知模式",
     "Setting": "设置",
+    "{key} Settings": "{key}设置",
     "Shanghai": "上海",
     "Shenzhen": "深圳",
     "Silicon valley": "硅谷",
@@ -133,6 +134,7 @@
     "Sydney": "悉尼",
     "Task": "任务",
     "Test": "测试",
+    "Test Management": "测试管理",
     "The administrator has received your request. Please go to": "管理员已收到您的请求。请稍后到",
     "The current version has been referenced by the management entry. Please dereference before editing.": "当前版本已被管理条目引用，请解除引用后再编辑",
     "The invitation link and verification code have been created": "邀请链接和验证码已创建",
@@ -873,8 +875,6 @@
     "title": "标题",
     "today": "今天",
     "total": "总",
-    "total CPU allocation": "CPU 分配总量",
-    "total Memory allocation": "内存分配总量",
     "total {total} items": "共 {total} 条",
     "total {total} items, current display top 10000": "共 {total} 条，当前显示前10000条",
     "traffic audit": "流量审计",
