--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -781,8 +781,8 @@
     "please fill in the format correctly": "please fill in the format correctly",
     "please fill out": "please fill out",
     "please input": "please input",
-    "remaining quota": "remaining quota",
     "reference times": "reference times",
+    "remaining quota": "remaining quota",
     "running cluster": "running cluster",
     "search by {name}": "search by {name}",
     "search for": "search for",
@@ -820,8 +820,10 @@
     "API overview": "API overview",
     "APIs": "APIs",
     "Add Followers": "Add Followers",
+    "Addon": "Addon",
     "After the use case is selected, the batch operation can be performed.": "After the use case is selected, the batch operation can be performed.",
     "An Action with the same name exists.": "An Action with the same name exists.",
+    "Applications": "Applications",
     "Are you sure to delete in batches?": "Are you sure to delete in batch?",
     "Are you sure to leave, with the error message not saved?": "Are you sure to leave, with the error message not saved?",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.",
@@ -863,10 +865,12 @@
     "Name already existed. Please rename it.": "Name already existed. Please rename it.",
     "New version available. Upgrade now?": "New version available. Upgrade now?",
     "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.": "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.",
+    "O & M": "O & M",
     "Platform default rules. Please add custom rules if necessary.": "platform default rules, if you need to adjust by adding custom rules",
     "Please enter the issue title": "Please enter the issue title",
     "Please enter the repository address started with http or https.": "Please enter the repository address started with http or https.",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "Please fill in the json expression of obtained target key to determine if the key exists.",
+    "Projects": "Projects",
     "Quickly create from artifacts": "Quickly create from artifacts",
     "Quickly update from artifacts": "Quickly update from artifacts",
     "Remaining": "Remaining",
@@ -1594,7 +1598,6 @@
     "project level app": "project level app",
     "project member": "project member",
     "project quota": "project quota",
-    "project resource": "project resource",
     "project updated successfully": "project updated successfully",
     "project-level-app-form-tip": "after setting as a project-level application, the pipeline of the application can directly call the pipelines of other applications of the project",
     "protect branch, not editable": "protect branch, not editable",
@@ -2204,6 +2207,7 @@
     "geography": "geography",
     "global strategy": "global strategy",
     "global topology": "global topology",
+    "gray release": "gray release",
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
