--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -781,8 +781,8 @@
     "please fill in the format correctly": "请正确填写格式",
     "please fill out": "请填写",
     "please input": "请键入",
-    "remaining quota": "剩余配额",
     "reference times": "引用次数",
+    "remaining quota": "剩余配额",
     "running cluster": "运行集群",
     "search by {name}": "通过{name}搜索",
     "search for": "搜索",
@@ -820,8 +820,10 @@
     "API overview": "API 概况",
     "APIs": "接口列表",
     "Add Followers": "添加关注人",
+    "Addon": "扩展服务",
     "After the use case is selected, the batch operation can be performed.": "选中用例后，才能进行批量操作",
     "An Action with the same name exists.": "存在同名 Action!",
+    "Applications": "应用开发",
     "Are you sure to delete in batches?": "确定批量删除吗？",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
@@ -863,10 +865,12 @@
     "Name already existed. Please rename it.": "名称已存在，请重新命名",
     "New version available. Upgrade now?": "版本可升级，是否升级",
     "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.": "数值：请按照标准的数学表达式规范填写。示例如下： 区间支持开区间和闭区间、示例闭区间：[-20,20] 表示集合：<[-200,200],-1,2>。",
+    "O & M": "运维管理",
     "Platform default rules. Please add custom rules if necessary.": "平台默认规则，如需要调整请通过添加自定义规则来完成",
     "Please enter the issue title": "请输入事项标题",
     "Please enter the repository address started with http or https.": "请输入以http或https开头的仓库地址",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
+    "Projects": "项目管理",
     "Quickly create from artifacts": "通过制品快速创建",
     "Quickly update from artifacts": "通过制品快速更新",
     "Remaining": "剩余",
@@ -1594,7 +1598,6 @@
     "project level app": "项目级应用",
     "project member": "项目成员",
     "project quota": "项目配额",
-    "project resource": "项目资源",
     "project updated successfully": "更新项目成功",
     "project-level-app-form-tip": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
     "protect branch, not editable": "保护分支, 不可编辑",
@@ -2204,6 +2207,7 @@
     "geography": "地理",
     "global strategy": "全局策略",
     "global topology": "全局拓扑",
+    "gray release": "灰度发布",
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
