feat: update project menu (#1873)
* feat: update project menu

* fix: update default show

* fix: update O&M icon

--- a/locales/en.json
+++ b/locales/en.json
@@ -112,6 +112,7 @@
     "Release": "Release",
     "Report": "Report",
     "Resource": "Resource",
+    "Resource summary": "Resource summary",
     "SLA description": "SLA description",
     "SLA name": "SLA name",
     "SMS": "SMS",
@@ -121,6 +122,7 @@
     "Service": "Service",
     "Set up a notification channel to set a notification mode": "Set up a notification channel to set a notification mode",
     "Setting": "Setting",
+    "{key} Settings": "Settings",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
     "Silicon valley": "Silicon valley",
@@ -133,6 +135,7 @@
     "Sydney": "Sydney",
     "Task": "Task",
     "Test": "Test",
+    "Test Management": "Test Management",
     "The administrator has received your request. Please go to": "the administrator has received your request. please come to ",
     "The current version has been referenced by the management entry. Please dereference before editing.": "The current version has been compressed and referenced by management, please dereference before editing",
     "The invitation link and verification code have been created": "The invitation link and verification code have been created",
