--- a/locales/zh.json
+++ b/locales/zh.json
@@ -112,6 +112,7 @@
     "Release": "发布",
     "Report": "报告",
     "Resource": "资源",
+    "Resource summary": "资源汇总",
     "SLA description": "SLA 描述",
     "SLA name": "SLA 名称",
     "SMS": "短信",
@@ -121,6 +122,7 @@
     "Service": "服务",
     "Set up a notification channel to set a notification mode": "建立通知通道以设置通知模式",
     "Setting": "设置",
+    "{key} Settings": "{key}设置",
     "Shanghai": "上海",
     "Shenzhen": "深圳",
     "Silicon valley": "硅谷",
@@ -133,6 +135,7 @@
     "Sydney": "悉尼",
     "Task": "任务",
     "Test": "测试",
+    "Test Management": "测试管理",
     "The administrator has received your request. Please go to": "管理员已收到您的请求。请稍后到",
     "The current version has been referenced by the management entry. Please dereference before editing.": "当前版本已被管理条目引用，请解除引用后再编辑",
     "The invitation link and verification code have been created": "邀请链接和验证码已创建",
