refactor(common): table optimization

--- a/locales/en.json
+++ b/locales/en.json
@@ -688,6 +688,7 @@
     "project icon": "project icon",
     "project identifier": "project identifier",
     "project list": "project list",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.",
     "project name": "project name",
     "project setting": "settings",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
@@ -919,6 +920,7 @@
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
+    "view more": "view more",
     "view {name}": "view {name}",
     "wait for {approver} to approve": "wait for {approver} to approve",
     "warning": "warning",
