--- a/locales/zh.json
+++ b/locales/zh.json
@@ -688,6 +688,7 @@
     "project icon": "项目图标",
     "project identifier": "项目标识",
     "project list": "项目列表",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "项目管理提供了安全隔离的、具有访问权限控制的工作平台。这里您可以看到当前企业空间内资源运行的概况。",
     "project name": "项目名称",
     "project setting": "项目设置",
     "project-app-name-tip": "只能使用小写字母或数字开头和结尾，连接符号可以使用 -",
@@ -919,6 +920,7 @@
     "version number": "版本号",
     "view comparison results": "查看对比结果",
     "view link": "查看链路",
+    "view more": "查看更多",
     "view {name}": "查看{name}",
     "wait for {approver} to approve": "等待{approver}审批",
     "warning": "警告",
