--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -52,6 +52,7 @@
     "CIDR": "CIDR",
     "CIDR segment": "CIDR segment",
     "CIDR-tips": "the CIDR block cannot be modified after it is set. You can use 192.168.0.0/16, 172.16.0.0/12, 10.0.0.0/8, or their subnets as the CIDR blocks of VPCs. The CIDR block mask must be 8 to 24 bits in length. An example of a CIDR block is 192.168.0.0/16. ",
+    "CPU quota": "CPU quota",
     "CPU usage": "CPU usage",
     "CPU usage rate": "CPU usage rate",
     "Chinese": "Chinese",
@@ -82,6 +83,7 @@
     "It is recommended to use 2 nodes in production, and 1 node in test. Only 1 node does not support the creation of SLB.": "suggest 2 nodes in production and 1 node in test, only 1 node does not support creation of slb",
     "Kubectl command": "Kubectl command",
     "MEM allocation": "MEM allocation",
+    "MEM quota": "MEM quota",
     "MEM usage": "MEM usage",
     "Memory": "Memory",
     "Memory Water Level": "Memory Water Level",
@@ -100,8 +102,7 @@
     "Node List": "Node List",
     "Node conversion formula": "Node conversion formula",
     "Notification group does not exist or has been remove. Please change one.": "Notification group does not exist or has been remove. Please change one.",
-    "Number of converted nodes": "Number of converted nodes",
-    "O & M dashboard": "O & M dashboard",
+    "Number of used nodes": "Number of used nodes",
     "O&M dashboard added successfully": "O&M dashboard added successfully",
     "O&M dashboard updated successfully": "O&M dashboard updated successfully",
     "OSS Overview": "OSS Overview",
@@ -221,6 +222,8 @@
     "block network": "block network",
     "built-in templates": "built-in templates",
     "built-in templates tip": "built-in templates tip",
+    "by owner": "by owner",
+    "by project": "by project",
     "can't be the same as the data path": "can't be the same as the data path",
     "cannot be the same as the exec path": "cannot be the same as the exec path",
     "cannot contain restricted keywords": "cannot contain restricted keywords",
@@ -536,6 +539,7 @@
     "product configuration": "product configuration",
     "product type": "product type",
     "production environment": "production environment",
+    "project count": "project count",
     "project label": "project label",
     "provides functions such as project management, code hub, CI/CD, artifact library and a complete R&D process.": "it includes functions such as project management, code hosting, CI/CD and product library, and provides a complete R&D process.",
     "public org": "public org",
