--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -52,6 +52,7 @@
     "CIDR": "网段",
     "CIDR segment": "CIDR网段",
     "CIDR-tips": "支持使用 192.168.0.0/16、172.16.0.0/12、10.0.0.0/8 及其子网作为专有网络地址段，网段掩码有效范围 8-24。填写示例：192.168.0.0/16。",
+    "CPU quota": "CPU 配额",
     "CPU usage": "CPU 使用",
     "CPU usage rate": "CPU 使用率",
     "Chinese": "中文",
@@ -82,6 +83,7 @@
     "It is recommended to use 2 nodes in production, and 1 node in test. Only 1 node does not support the creation of SLB.": "建议生产2台，测试1台，只有1台时不支持创建slb",
     "Kubectl command": "Kubectl 命令行",
     "MEM allocation": "内存分配",
+    "MEM quota": "内存配额",
     "MEM usage": "内存使用",
     "Memory": "内存",
     "Memory Water Level": "内存水位",
@@ -100,14 +102,13 @@
     "Node List": "节点列表",
     "Node conversion formula": "节点转换公式",
     "Notification group does not exist or has been remove. Please change one.": "通知组不存在或已被移除，可更换通知组",
-    "Number of converted nodes": "转换节点数",
-    "O & M dashboard": "运维大盘",
+    "Number of used nodes": "使用节点数",
     "O&M dashboard added successfully": "添加运维大盘成功",
     "O&M dashboard updated successfully": "更新运维大盘成功",
     "OSS Overview": "OSS 总览",
     "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源: 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
     "Operation log retention days": "操作日志保留天数",
-    "Owner": "负责人",
+    "Owner": "所有者",
     "Pay-As-You-Go": "按量付费",
     "Please enter the IP, separated by pressing Enter or semicolons, up to 5 allowed": "请输入IP,可以回车或;分隔，最多填写5个",
     "Please enter the cluster identity to confirm to go offline.": "请输入集群标识确认下线",
@@ -221,6 +222,8 @@
     "block network": "封网",
     "built-in templates": "内置模板",
     "built-in templates tip": "可以套用内置模板来快速编辑分析规则",
+    "by owner": "按所有者",
+    "by project": "按项目",
     "can't be the same as the data path": "不能和数据路径一致",
     "cannot be the same as the exec path": "不能和exec路径一样",
     "cannot contain restricted keywords": "不能包含限制关键字",
@@ -536,6 +539,7 @@
     "product configuration": "产品配置",
     "product type": "产品类型",
     "production environment": "生产环境",
+    "project count": "项目数",
     "project label": "项目标签",
     "provides functions such as project management, code hub, CI/CD, artifact library and a complete R&D process.": "包含项目管理、代码托管、CI/CD和制品库等功能，提供完整的研发流程。",
     "public org": "公开组织",
