fix: update cmp menu / resource rank (#1881)

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -200,6 +200,7 @@
     "application": "应用",
     "application instance": "应用实例",
     "application performance": "应用性能",
+    "application resource": "应用资源",
     "application role": "应用角色",
     "applied successfully": "申请成功",
     "apply to call": "申请调用",
@@ -299,7 +300,7 @@
     "closed": "已关闭",
     "closed at": "关闭于",
     "cloud accounts": "云账户管理",
-    "cloud source": "云资源管理",
+    "cloud source": "云服务",
     "cloud ssd": "云SSD",
     "cloud vendor": "云厂商",
     "cluster": "集群",
@@ -307,6 +308,8 @@
     "cluster infos": "集群配置信息",
     "cluster name": "集群名称",
     "cluster overview": "集群总览",
+    "cluster resource": "集群资源",
+    "clusters": "集群",
     "colour": "着色",
     "comment": "评论",
     "commit": "提交",
@@ -371,6 +374,7 @@
     "current user": "当前用户",
     "current week": "本周",
     "custom alarm": "自定义告警",
+    "custom dashboard": "自定义大盘",
     "custom labels": "自定义标签",
     "customize": "自定义",
     "database": "数据库",
@@ -409,6 +413,7 @@
     "document": "文档",
     "documentation": "帮助文档",
     "does not exist": "不存在",
+    "domain": "域名",
     "done": "确定",
     "dop": "DevOps 平台",
     "download": "下载",
@@ -508,7 +513,6 @@
     "is it confirmed?": "是否确认？",
     "is it required": "是否必填",
     "item {index} should be lowercase letters, numbers, dot, -, *": "第{index}项请输入小写字母、数字、-、*、.",
-    "job catalogue": "任务目录",
     "join org": "加入组织",
     "join {orgName}": "加入 {orgName}",
     "joined apps": "我的应用",
@@ -753,6 +757,7 @@
     "resource detail": "资源详情",
     "resource environment": "资源环境",
     "resource management": "资源管理",
+    "resource rank": "资源使用排行",
     "resource summary": "资源汇总",
     "resource version": "资源版本",
     "response body": "响应体",
@@ -800,7 +805,6 @@
     "service position": "服务位置",
     "service provider": "服务商",
     "services": "服务目录",
-    "services&tasks": "服务&任务",
     "set as {type}": "设置为{type}",
     "set successfully": "设置成功",
     "set tags": "设置标签",
