--- a/locales/en.json
+++ b/locales/en.json
@@ -200,6 +200,7 @@
     "application": "application",
     "application instance": "application instance",
     "application performance": "application performance",
+    "application resource": "application resource",
     "application role": "application role",
     "applied successfully": "applied successfully",
     "apply to call": "apply to call",
@@ -307,6 +308,8 @@
     "cluster infos": "cluster infos",
     "cluster name": "cluster name",
     "cluster overview": "cluster overview",
+    "cluster resource": "cluster resource",
+    "clusters": "clusters",
     "colour": "colour",
     "comment": "comment",
     "commit": "commit",
@@ -371,6 +374,7 @@
     "current user": "current user",
     "current week": "current week",
     "custom alarm": "custom alarm",
+    "custom dashboard": "custom dashboard",
     "custom labels": "custom labels",
     "customize": "customize",
     "database": "database",
@@ -409,6 +413,7 @@
     "document": "document",
     "documentation": "documentation",
     "does not exist": "does not exist",
+    "domain": "domain",
     "done": "done",
     "dop": "DevOps platform",
     "download": "download",
@@ -508,7 +513,6 @@
     "is it confirmed?": "is it confirmed?",
     "is it required": "is it required",
     "item {index} should be lowercase letters, numbers, dot, -, *": "item {index} should be lowercase letters, numbers, dot, -, *",
-    "job catalogue": "job catalogue",
     "join org": "join org",
     "join {orgName}": "join {orgName}",
     "joined apps": "joined apps",
@@ -753,6 +757,7 @@
     "resource detail": "resource detail",
     "resource environment": "resource environment",
     "resource management": "resource management",
+    "resource rank": "resource rank",
     "resource summary": "resource",
     "resource version": "resource version",
     "response body": "response body",
@@ -800,7 +805,6 @@
     "service position": "Service Position",
     "service provider": "service provider",
     "services": "services",
-    "services&tasks": "services&tasks",
     "set as {type}": "set as {type}",
     "set successfully": "set successfully",
     "set tags": "set tags",
