feat: search rule name

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -80,7 +80,6 @@
     "Market": "集市",
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
-    "Memory allocation": "内存分配",
     "Memory limit": "内存限额",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
@@ -483,6 +482,7 @@
     "import and export records": "导入导出记录",
     "import configuration": "导入配置",
     "imported successfully": "导入成功",
+    "in": "包含",
     "includes letters, numbers and underscores": "包含英文,数字,_",
     "indicator": "指标",
     "information configuration": "信息配置",
@@ -592,6 +592,7 @@
     "no template": "暂无模板",
     "node": "节点",
     "none": "无",
+    "not in": "不包含",
     "not member": "非成员",
     "not started": "未启动",
     "notification": "通知",
@@ -877,8 +878,6 @@
     "title": "标题",
     "today": "今天",
     "total": "总",
-    "total CPU allocation": "CPU 分配总量",
-    "total Memory allocation": "内存分配总量",
     "total {total} items": "共 {total} 条",
     "total {total} items, current display top 10000": "共 {total} 条，当前显示前10000条",
     "traffic audit": "流量审计",
