--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -781,8 +781,8 @@
     "please fill in the format correctly": "please fill in the format correctly",
     "please fill out": "please fill out",
     "please input": "please input",
-    "remaining quota": "remaining quota",
     "reference times": "reference times",
+    "remaining quota": "remaining quota",
     "running cluster": "running cluster",
     "search by {name}": "search by {name}",
     "search for": "search for",
@@ -1585,7 +1585,6 @@
     "private project": "private project",
     "professional edition": "professional edition",
     "progress": "progress",
-    "project ID": "project ID",
     "project admin confirming": "project admin confirming",
     "project collaboration": "project collaboration",
     "project created successfully": "project created successfully",
@@ -1594,7 +1593,6 @@
     "project level app": "project level app",
     "project member": "project member",
     "project quota": "project quota",
-    "project resource": "project resource",
     "project updated successfully": "project updated successfully",
     "project-level-app-form-tip": "after setting as a project-level application, the pipeline of the application can directly call the pipelines of other applications of the project",
     "protect branch, not editable": "protect branch, not editable",
@@ -2204,6 +2202,7 @@
     "geography": "geography",
     "global strategy": "global strategy",
     "global topology": "global topology",
+    "gray release": "gray release",
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
