--- a/locales/en.json
+++ b/locales/en.json
@@ -80,7 +80,6 @@
     "Market": "Market",
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
-    "Memory allocation": "Memory allocation",
     "Memory limit": "Memory limit",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
@@ -483,6 +482,7 @@
     "import and export records": "import and export records",
     "import configuration": "import configuration",
     "imported successfully": "imported successfully",
+    "in": "in",
     "includes letters, numbers and underscores": "includes letters, numbers and underscores",
     "indicator": "indicator",
     "information configuration": "information configuration",
@@ -592,6 +592,7 @@
     "no template": "no template",
     "node": "Node",
     "none": "none",
+    "not in": "not in",
     "not member": "not member",
     "not started": "not started",
     "notification": "notification",
@@ -877,8 +878,6 @@
     "title": "title",
     "today": "today",
     "total": "total",
-    "total CPU allocation": "total CPU allocation",
-    "total Memory allocation": "total Memory allocation",
     "total {total} items": "total {total} items",
     "total {total} items, current display top 10000": "total {total} items, current display top 10000",
     "traffic audit": "traffic audit",
