refactor(common): table optimization

--- a/locales/en.json
+++ b/locales/en.json
@@ -57,6 +57,7 @@
     "For editing members, setting member roles and role permissions, please refer to": "For editing members, setting member roles and role permissions, please refer to",
     "Frankfurt": "Frankfurt",
     "Germany": "Germany",
+    "Go to page": "Go to page",
     "Group": "Group",
     "Hangzhou": "Hangzhou",
     "Heyuan": "Heyuan",
@@ -213,6 +214,7 @@
     "are you sure?": "are you sure?",
     "artifact ID": "artifact ID",
     "artifact management": "artifact management",
+    "ascend": "ascend",
     "assert {name} setting is abnormal": "assert {name} setting is abnormal",
     "associated ability": "associated ability",
     "associated microservice": "Associated microservice",
@@ -259,6 +261,7 @@
     "can only contain letters, numbers, underscores and hyphens": "can only contain letters, numbers, underscores and hyphens",
     "can only contain numbers": "can only contain numbers",
     "cancel": "cancel",
+    "cancel order": "cancel order",
     "cancelled by user": "cancelled by user",
     "cannot contain special characters": "cannot contain special characters",
     "cannot exceed 40 characters": "cannot exceed 40 characters",
@@ -383,6 +386,7 @@
     "deployment log": "deployment log",
     "deprecated": "deprecated",
     "deprecated version": "deprecated version",
+    "descend": "descend",
     "description": "description",
     "design": "design",
     "designated person": "designated person",
@@ -933,6 +937,7 @@
     "{num} month(s)": "{num} month(s)",
     "{num} year(s)": "{num} year(s)",
     "{num} {type}": "{num} {type}",
+    "{size} items / page": "{size} items / page",
     "{specific} instance": "{specific} instance",
     "{total} item added successfully": "{total} item added successfully",
     "{unreadCount} messages unread": "{unreadCount} messages unread"
