feat: search rule name (#1888)

--- a/locales/en.json
+++ b/locales/en.json
@@ -490,6 +490,7 @@
     "import and export records": "import and export records",
     "import configuration": "import configuration",
     "imported successfully": "imported successfully",
+    "in": "in",
     "includes letters, numbers and underscores": "includes letters, numbers and underscores",
     "indicator": "indicator",
     "information configuration": "information configuration",
@@ -598,6 +599,7 @@
     "no template": "no template",
     "node": "Node",
     "none": "none",
+    "not in": "not in",
     "not member": "not member",
     "not started": "not started",
     "notification": "notification",
