--- a/locales/zh.json
+++ b/locales/zh.json
@@ -490,6 +490,7 @@
     "import and export records": "导入导出记录",
     "import configuration": "导入配置",
     "imported successfully": "导入成功",
+    "in": "包含",
     "includes letters, numbers and underscores": "包含英文,数字,_",
     "indicator": "指标",
     "information configuration": "信息配置",
@@ -598,6 +599,7 @@
     "no template": "暂无模板",
     "node": "节点",
     "none": "无",
+    "not in": "不包含",
     "not member": "非成员",
     "not started": "未启动",
     "notification": "通知",
