fix: pick cmp menu /resource rank to 1.4

--- a/locales/en.json
+++ b/locales/en.json
@@ -197,6 +197,7 @@
     "application": "application",
     "application instance": "application instance",
     "application performance": "application performance",
+    "application resource": "application resource",
     "application role": "application role",
     "applied successfully": "applied successfully",
     "apply to call": "apply to call",
@@ -301,6 +302,7 @@
     "cluster infos": "cluster infos",
     "cluster name": "cluster name",
     "cluster overview": "cluster overview",
+    "cluster resource": "cluster resource",
     "clusters": "clusters",
     "colour": "colour",
     "comment": "comment",
@@ -365,6 +367,7 @@
     "current user": "current user",
     "current week": "current week",
     "custom alarm": "custom alarm",
+    "custom dashboard": "custom dashboard",
     "custom labels": "custom labels",
     "customize": "customize",
     "database": "database",
@@ -403,6 +406,7 @@
     "document": "document",
     "documentation": "documentation",
     "does not exist": "does not exist",
+    "domain": "domain",
     "done": "done",
     "dop": "DevOps platform",
     "download": "download",
@@ -501,7 +505,6 @@
     "is it confirmed?": "is it confirmed?",
     "is it required": "is it required",
     "item {index} should be lowercase letters, numbers, dot, -, *": "item {index} should be lowercase letters, numbers, dot, -, *",
-    "job catalogue": "job catalogue",
     "join org": "join org",
     "join {orgName}": "join {orgName}",
     "joined apps": "joined apps",
@@ -739,6 +742,7 @@
     "resource detail": "resource detail",
     "resource environment": "resource environment",
     "resource management": "resource management",
+    "resource rank": "resource rank",
     "resource summary": "resource",
     "resource version": "resource version",
     "response body": "response body",
@@ -785,7 +789,6 @@
     "service name": "Service Name",
     "service position": "Service Position",
     "services": "services",
-    "services&tasks": "services&tasks",
     "set as {type}": "set as {type}",
     "set successfully": "set successfully",
     "set tags": "set tags",
