fix: fix table style

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -742,7 +742,7 @@
     "resource detail": "资源详情",
     "resource environment": "资源环境",
     "resource management": "资源管理",
-    "resource rank": "资源使用排行",
+    "resource rank": "使用排行",
     "resource summary": "资源汇总",
     "resource version": "资源版本",
     "response body": "响应体",
