Refactor/org center project detail optimization (#1895)
* refactor(common): project detail optimization in org center

* refactor(common): table optimization

--- a/locales/en.json
+++ b/locales/en.json
@@ -142,6 +142,7 @@
     "The invitation link has been created.": "The invitation link has been created.",
     "The name is reserved internally. Please change the name.": "The name is reserved internally. Please change the name.",
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
+    "This page has no data, whether to go ": "This page has no data, whether to go ",
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
     "URL parameters": "URL parameters",
@@ -595,6 +596,7 @@
     "no more data": "no more data",
     "no more than {size} characters": "no more than {size} characters",
     "no need to execute": "no need to execute",
+    "no quota": "no quota",
     "no running runtime": "no running runtime",
     "no template": "no template",
     "node": "Node",
@@ -633,11 +635,13 @@
     "orgCenter": "OrgCenter",
     "organization": "organization",
     "organization unit": "organization unit",
+    "other settings": "other settings",
     "out params exist the same {key}": "out params exist the same {key}",
     "out params {name} setting is abnormal": "out params {name} setting is abnormal",
     "overtime": "overtime",
     "overview": "overview",
     "page loading completed": "page loading completed",
+    "page 1": "page 1",
     "parameter cannot be empty": "parameter cannot be empty",
     "parameter setting": "parameter setting",
     "passed": "passed",
@@ -702,6 +706,7 @@
     "project icon": "project icon",
     "project identifier": "project identifier",
     "project list": "project list",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.",
     "project name": "project name",
     "project setting": "settings",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
@@ -917,6 +922,7 @@
     "uppercase letter": "uppercase letter",
     "url address": "url address",
     "usage": "used:",
+    "used": "used",
     "user": "user",
     "user ID": "user ID",
     "user name": "user name",
@@ -934,6 +940,7 @@
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
+    "view more": "view more",
     "view {name}": "view {name}",
     "wait for {approver} to approve": "wait for {approver} to approve",
     "warning": "warning",
