--- a/locales/zh.json
+++ b/locales/zh.json
@@ -142,6 +142,7 @@
     "The invitation link has been created.": "邀请链接已创建",
     "The name is reserved internally. Please change the name.": "该命名被内部保留，请更改命名",
     "The {index} item quantity and unit cannot be empty.": "第{index}项数量和单位不得为空",
+    "This page has no data, whether to go ": "该页暂无数据，是否前往 ",
     "Tickets": "工单",
     "Tokyo": "东京",
     "URL parameters": "URL参数",
@@ -595,6 +596,7 @@
     "no more data": "没有更多数据",
     "no more than {size} characters": "不超过{size}字符",
     "no need to execute": "无需执行",
+    "no quota": "暂无配额",
     "no running runtime": "没有运行的Runtime",
     "no template": "暂无模板",
     "node": "节点",
@@ -633,11 +635,13 @@
     "orgCenter": "管理中心",
     "organization": "组织",
     "organization unit": "组织单位",
+    "other settings": "其他设置",
     "out params exist the same {key}": "出参存在相同的{key}",
     "out params {name} setting is abnormal": "出参 {name} 设置异常",
     "overtime": "超时",
     "overview": "总览",
     "page loading completed": "网页加载完成",
+    "page 1": "第一页",
     "parameter cannot be empty": "参数不能为空",
     "parameter setting": "参数设置",
     "passed": "已通过",
@@ -702,6 +706,7 @@
     "project icon": "项目图标",
     "project identifier": "项目标识",
     "project list": "项目列表",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "项目管理提供了安全隔离的、具有访问权限控制的工作平台。这里您可以看到当前企业空间内资源运行的概况。",
     "project name": "项目名称",
     "project setting": "项目设置",
     "project-app-name-tip": "只能使用小写字母或数字开头和结尾，连接符号可以使用 -",
@@ -917,6 +922,7 @@
     "uppercase letter": "大写字母",
     "url address": "URL 地址",
     "usage": "使用量：",
+    "used": "已使用",
     "user": "用户",
     "user ID": "用户ID",
     "user name": "用户名",
@@ -934,6 +940,7 @@
     "version number": "版本号",
     "view comparison results": "查看对比结果",
     "view link": "查看链路",
+    "view more": "查看更多",
     "view {name}": "查看{name}",
     "wait for {approver} to approve": "等待{approver}审批",
     "warning": "警告",
