fix: fix dop menus

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1811,7 +1811,7 @@
     "ticket description": "工单描述",
     "ticket title": "工单标题",
     "ticket type": "工单类型",
-    "tickets": "项目工单",
+    "tickets": "工单反馈",
     "time consuming": "耗时",
     "time cost": "用时",
     "time period": "时间段",
